kustomize/tools-stack/uptime-kuma/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/version: 1.23.13
    reloader.stakater.com/auto: "true"
  name: uptime-kuma
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: uptime-kuma
      app.kubernetes.io/name: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: uptime-kuma
        app.kubernetes.io/name: uptime-kuma
    spec:
      automountServiceAccountToken: false
      containers:
      - env: []
        image: louislam/uptime-kuma:1.23.13-debian
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - extra/healthcheck
          failureThreshold: 3
          initialDelaySeconds: 180
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: uptime-kuma
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext: {}
        volumeMounts:
        - mountPath: /app/data
          name: storage
      securityContext: {}
      serviceAccountName: default
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: uptime-kuma
