kustomize/tools-stack/uptime-kuma/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/version: 1.23.13
  name: uptime-kuma
  namespace: tools
spec:
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
  type: ClusterIP
