kustomize/tools-stack/uptime-kuma/uptime-kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header   Upgrade $http_upgrade;
        proxy_cache_bypass $http_upgrade;
      }
  labels:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/version: 1.23.13
    helm.sh/chart: uptime-kuma-2.21.3
  name: uptime-kuma
  namespace: tools
spec:
  ingressClassName: nginx
  rules:
  - host: uptime.vinicima.com
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
        path: /
        pathType: ImplementationSpecific
  - host: uptime-k8s.vinicima.com
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - uptime-k8s.vinicima.com
    - uptime.vinicima.com
    secretName: vinicima-com-tls
