kustomize/tools-stack/uptime-kuma/uptime-kuma-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.vinicima.com`) || Host(`uptime-k8s.vinicima.com`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
